--- a/home chef/styles/navbar.css
+++ b/home chef/styles/navbar.css
@@ -1,16 +1,16 @@
-/* Common styles for all screens */
+
 nav {
     padding-top: 3em;
     padding-left: 7em;
     padding-right: 7em;
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Align items vertically in the center */
+    align-items: center;
     font-weight: bold;
 }
 
 nav .tasty_logo {
-    width: 7em;
+    width: 6.4em;
     height: auto;
 }
 
