--- a/home chef/styles/page1.css
+++ b/home chef/styles/page1.css
@@ -1,18 +1,10 @@
 
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
 #page1{
     background-image: url('../assets/images/bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
-    margin-bottom: 4em;
+    padding-bottom: 4em;
 }
 
 .landing-section {
