--- a/home chef/styles/page3.css
+++ b/home chef/styles/page3.css
@@ -1,5 +1,5 @@
 #page3{
-    padding: 3em 5em 0 5em;
+    padding: 3em 5em 2em 5em;
     margin: 0;
     background-image: url("../assets/images/bg-5.png");
 }
